# parallel101

./: README.md
hw01/: CMakeLists.txt  README.md  main.cpp  mandel.cpp  mandel.h  rainbow.cpp  rainbow.h
hw01/stbiw/: CMakeLists.txt
hw02/: CMakeLists.txt  README.md  main.cpp
hw03/: main.cpp
hw04/: CMakeLists.txt  README.md  main.cpp  score.txt
hw05/: CMakeLists.txt  README.md  main.cpp  run.sh
hw06/: CMakeLists.txt  README.md  main.cpp  score.md
hw07/: ANSWER.md  CMakeLists.txt  README.md  alignalloc.h  main.cpp  score.txt  ticktock.h
